Weighted overlay with spray-routing

--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 geotrellis.port = 8777
-geotrellis.rest-package = "chatta"
+geotrellis.rest-package = "pps.services"
 
 geotrellis.server.serve-static = "yes"
 geotrellis.server.static-path = "../static"
