--- a/geotrellis/src/main/resources/application.conf
+++ b/geotrellis/src/main/resources/application.conf
@@ -7,3 +7,6 @@ geotrellis.server.static-path = "../static"
 geotrellis.catalog = "data/catalog.json"
 
 geotrellis.hostname = "localhost"
+
+# Seconds to wait before refreshing the Esri report catalog.
+pp.esri.update-reports-catalog = 86400 # Once a day
